# sqlite-vacuum

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: byte_format.rs  byte_format_tests.rs  cli_args.rs  display.rs  errors.rs  main.rs  sqlite_file.rs  sqlite_file_tests.rs
